--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,5 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script: python -m pytest tests/basic_tests.py
+notifications:
+  email: false
