--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ install:
   - pip install .
   - pip install -r requirements.txt
 # command to run tests
-script: python -m pytest tests/basic_tests.py
+script: python -m pytest kvasir/tests/basic_tests.py
 notifications:
   email: false
